--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,12 @@ services:
       POSTGRES_DB: todo
     volumes:
       - ./data/db:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg-isready -U administrator -d todo"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   app:
     build: .
     restart: always
@@ -18,4 +22,6 @@ services:
     ports:
       - "6400:6400"
     depends_on:
-      - database
+      database:
+        condition: service_healthy
+        restart: true
